--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@googleapis/chat": "^9.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "ethers": "^5.7.2",
+    "googleapis": "^109.0.1",
     "node-fetch": "2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
